# gui-fullstack

./: docker-compose.yml
app/: Dockerfile  Makefile  celerybeat-schedule  db.sqlite3  entrypoint.sh  pyproject.toml
app/budgets/: admin.py  models.py
app/budgets/migrations/: 0001_initial.py
app/core/: celery.py  settings.py
app/sii/: admin.py  models.py  sii.py  tasks.py
app/sii/migrations/: 0001_initial.py  0002_alter_purchasebook_fecha_docto.py  0003_remove_purchasebook_nro.py  0004_purchasebook_cost_centers_and_more.py
app/sii/tests/: data.py
app/tools/: create_dic_dte.py
app/welcome/: tasks.py
