[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Christian Vilches <christia.vilches>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
celery = {extras = ["redis"], version = "^5.3.6"}
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
